newpid (5) UNRELEASED; urgency=medium

  * newpid -n uses CLONE_NEWNET to start a new network namespace.

 -- Christoph Berg <myon@debian.org>  Mon, 28 Sep 2015 11:25:47 +0200

newpid (4) unstable; urgency=medium

  * Make /proc a slave mount as suggested by Lennart Poettering.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 12 Mar 2014 13:30:05 +0100

newpid (3) unstable; urgency=medium

  * Remount /proc to be private so it doesn't break when running under systemd.
    Patch by Michael Stapelberg, thanks! (See #739593)
  * Use Arch: linux-any.

 -- Christoph Berg <christoph.berg@credativ.de>  Mon, 10 Mar 2014 15:18:41 +0100

newpid (2) unstable; urgency=low

  * Add autopkgtest.
  * Enable build hardening.
  * Ignore errors on umount("/proc"), it could be busy.
  * Add manpage.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 16 Jan 2014 12:51:32 +0100

newpid (1) UNRELEASED; urgency=low

  * Initial release.

 -- Christoph Berg <myon@debian.org>  Mon, 21 Jan 2013 22:48:32 +0100