@@ -1,7 +1,7 @@
 .*.swp
 newpid
 newpid.o
-newpid.1
+*.1
 z.out
 
 debian/files
