@@ -1,0 +1,1 @@
+newpid: setuid-binary usr/bin/newpid 4755 root/root
