@@ -2,5 +2,8 @@
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
+override_dh_fixperms:
+	dh_fixperms --exclude newpid
+
 %:
 	dh $@
